[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/images/Extra animations and enemies/Enemy sprites/fishGreen.png" type="Texture" id=1]
[ext_resource path="res://mobScenes/Fish.gd" type="Script" id=2]
[ext_resource path="res://assets/images/Extra animations and enemies/Enemy sprites/fishPink.png" type="Texture" id=3]
[ext_resource path="res://assets/images/Extra animations and enemies/Enemy sprites/fishGreen_swim.png" type="Texture" id=4]
[ext_resource path="res://assets/images/Extra animations and enemies/Enemy sprites/fishPink_swim.png" type="Texture" id=5]
[ext_resource path="res://assets/images/Extra animations and enemies/Enemy sprites/fishGreen_dead.png" type="Texture" id=6]
[ext_resource path="res://assets/images/Extra animations and enemies/Enemy sprites/fishPink_dead.png" type="Texture" id=7]
[ext_resource path="res://assets/sounds/SwimmingSound.mp3" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "greenDeath"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "greenSwim"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "pinkDeath"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "pinkSwim"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 3 ) ]
}

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.290196, 0.937255, 0.0431373, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0509804, 0.00784314, 0.00784314, 1 )

[node name="Fish" type="KinematicBody2D" groups=["passive"]]
position = Vector2( 980, 30 )
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 3, 2.5 )
shape = SubResource( 1 )

[node name="PathTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 15, 2.5 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0

[node name="DangerSwitch" type="Timer" parent="."]
process_mode = 0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/greenDeath = SubResource( 8 )
anims/greenSwim = SubResource( 4 )
anims/pinkDeath = SubResource( 9 )
anims/pinkSwim = SubResource( 5 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -30.0
margin_top = -35.0
margin_right = 30.0
margin_bottom = -25.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
percent_visible = false

[node name="SwimSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -30.0
pitch_scale = 1.75
max_distance = 1000.0

[connection signal="timeout" from="PathTimer" to="." method="_on_PathTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DangerSwitch" to="." method="_on_DangerSwitch_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
